Pagination tamamlandi, haberler sayfasi eklendi, breadcrumb duzeltildi.

--- a/hugo/config.yaml
+++ b/hugo/config.yaml
@@ -28,6 +28,8 @@ menu:
 permalinks:
   posts: /haberler/:title/
 
+paginate: 6
+
 params:
   openGraph: true
   description: HAVELSAN Açıklab Açık Kaynaklı Yazılım Geliştirme
