--- a/hugo/config.yaml
+++ b/hugo/config.yaml
@@ -47,6 +47,24 @@ params:
     button_text: İletişime geçin
     button_link: "/iletisim"
   hero:
+    - title: HAVELSAN Açıklab
+      subtitle: Açık kaynak projeler geliştirerek; Türkiye başta olmak üzere tüm dünyada kullanılan açık kaynak güvenilir, inovatif ürünler sunmak, bu anlamda Türkiye’nin yazılım dışa bağımlılığını azaltmak, Türkiye’de açık kaynak kullanımını artırmak, dünyaca bilinir bir açık kaynak yazılım şirketi olmayı hedeflemektedir.
+      logos:
+        - image: "aciklab.png"
+      buttons:
+        - text: Şimdi Bilgi Alın
+          link: "egitimler"
+      image: aciklab_slide_1
+    - title: Merkezi Yönetim Sistemi
+      subtitle: BT süreçlerinizde bulunan bütün bileşenleri uzaktan, kararlı, güvenli ve genişletilebilir yöntemler ile merkezi olarak yönetmenizi sağlar.<br/><br/>Açık kaynak göç projelerinde Linux çekirdeğine sahip işletim sistemlerini ve diğer platformları Liman MYS ile yönetebilirsiniz.
+      logos:
+        - image: "aciklab.png"
+      buttons:
+        - text: Neden Liman MYS?
+          link: "https://liman.havelsan.com.tr/neden-liman-mys/"
+        - text: Demo Talebi
+          link: "https://liman.havelsan.com.tr/iletisim/"
+      image: slide  
     - title: Eğitimler
       subtitle: Açık kaynak kodlu sistemler hakkında bilgi birikiminizi arttırın ve hakim olun.
       logos:
@@ -54,7 +72,7 @@ params:
       buttons:
         - text: Şimdi Bilgi Alın
           link: "egitimler"
-      image: gnu_linux
+      image: egitim_slide
     - title: Hizmetler
       subtitle: Pardus ve açık kaynaklı yazılımlar üzerine olan hizmetlerimizi inceleyin.
       logos:
