Slidera egitim eklendi

--- a/hugo/config.yaml
+++ b/hugo/config.yaml
@@ -47,6 +47,16 @@ params:
     button_text: İletişime geçin
     button_link: "/iletisim"
   hero:
+    - title: Açık Kaynak Teknoloji Kampı
+      subtitle: HAVELSAN olarak açık kaynak kodlu teknolojiler alanında kamu kurumları, askeri kurumlar ve özel sektör alt yapılarında bulunan kurumsal lisanslı ürünlerin açık kaynak teknolojileri alanında dönüşümünü hedeflemektedir. HAVELSAN Açık Kaynak Teknoloji Kampı ile Türkiye’nin dijital dönüşümünde açık kaynak teknlojileri alanında görev alacak gençlerin kariyer gelişimine katkı sunmayı hedefliyoruz.
+      logos:
+        - image: "aciklab.png"
+      buttons:
+        - text: Detaylı Bilgi
+          link: /duyurular/a%C3%A7%C4%B1k-kaynak-teknoloji-kamp%C4%B1-ba%C5%9Fvurular%C4%B1-ba%C5%9Flad%C4%B1/
+        - text: Hemen Başvur!
+          link: https://vizyonergenc.com/ilan/havelsan/1505-acik-kaynak-teknoloji-kampi
+      image: aciklab_slide_1
     - title: HAVELSAN Açıklab
       subtitle: Açık kaynak projeler geliştirerek; Türkiye başta olmak üzere tüm dünyada kullanılan açık kaynak güvenilir, inovatif ürünler sunmak, bu anlamda Türkiye’nin yazılım dışa bağımlılığını azaltmak, Türkiye’de açık kaynak kullanımını artırmak, dünyaca bilinir bir açık kaynak yazılım şirketi olmayı hedeflemektedir.
       logos:
@@ -65,7 +75,7 @@ params:
         - text: Demo Talebi
           link: "https://liman.havelsan.com.tr/iletisim/"
       image: liman-screen  
-    
+
   section_about: 
     video_link: "https://www.youtu.be/yZyScWN2IbQ"
     thumbnail: video-holder.png
