--- a/hugo/config.yaml
+++ b/hugo/config.yaml
@@ -17,17 +17,12 @@ menu:
     url: "/"
     weight: 1
   - identifier: news
-    name: "Duyurular"
-    url: "/duyurular/"
-    weight: 2
+    name: "Liman MYS"
+    url: "https://liman.havelsan.com.tr/"
+    weight: 1
   footer:
   - identifier: diger
     name: "/images/aciklab_white.png"
-  - identifier: home
-    parent: diger
-    name: "Ana Sayfa"
-    url: "/"
-    weight: 1
 
 permalinks:
   posts: /duyurular/:title/
@@ -49,8 +44,6 @@ params:
   hero:
     - title: Açık Kaynak Teknoloji Kampı
       subtitle: HAVELSAN olarak açık kaynak kodlu teknolojiler alanında kamu kurumları, askeri kurumlar ve özel sektör alt yapılarında bulunan kurumsal lisanslı ürünlerin açık kaynak teknolojileri alanında dönüşümünü hedeflemektedir. HAVELSAN Açık Kaynak Teknoloji Kampı ile Türkiye’nin dijital dönüşümünde açık kaynak teknlojileri alanında görev alacak gençlerin kariyer gelişimine katkı sunmayı hedefliyoruz.
-      logos:
-        - image: "aciklab.png"
       buttons:
         - text: Detaylı Bilgi
           link: /duyurular/a%C3%A7%C4%B1k-kaynak-teknoloji-kamp%C4%B1-ba%C5%9Fvurular%C4%B1-ba%C5%9Flad%C4%B1/
@@ -59,16 +52,12 @@ params:
       image: aciklab_slide_1
     - title: HAVELSAN Açıklab
       subtitle: Açık kaynak projeler geliştirerek; Türkiye başta olmak üzere tüm dünyada kullanılan açık kaynak güvenilir, inovatif ürünler sunmak, bu anlamda Türkiye’nin yazılım dışa bağımlılığını azaltmak, Türkiye’de açık kaynak kullanımını artırmak, dünyaca bilinir bir açık kaynak yazılım şirketi olmayı hedeflemektedir.
-      logos:
-        - image: "aciklab.png"
       buttons:
         - text: Şimdi Bilgi Alın
           link: "egitimler"
       image: aciklab_slide_1
     - title: Merkezi Yönetim Sistemi
       subtitle: BT süreçlerinizde bulunan bütün bileşenleri uzaktan, kararlı, güvenli ve genişletilebilir yöntemler ile merkezi olarak yönetmenizi sağlar.<br/><br/>Açık kaynak göç projelerinde Linux çekirdeğine sahip işletim sistemlerini ve diğer platformları Liman MYS ile yönetebilirsiniz.
-      logos:
-        - image: "aciklab.png"
       buttons:
         - text: Neden Liman MYS?
           link: "https://liman.havelsan.com.tr/neden-liman-mys/"
