--- a/hugo/config.yaml
+++ b/hugo/config.yaml
@@ -42,12 +42,12 @@ params:
     button_text: İletişime geçin
     button_link: "/iletisim"
   hero:
-    - title: HAVELSAN Açıklab
-      subtitle: Açık kaynak projeler geliştirerek; Türkiye başta olmak üzere tüm dünyada kullanılan açık kaynak güvenilir, inovatif ürünler sunmak, bu anlamda Türkiye’nin yazılım dışa bağımlılığını azaltmak, Türkiye’de açık kaynak kullanımını artırmak, dünyaca bilinir bir açık kaynak yazılım şirketi olmayı hedeflemektedir.
-      buttons:
-        - text: Şimdi Bilgi Alın
-          link: "egitimler"
-      image: aciklab_slide_1
+    - title: Destek Planları
+      subtitle: Açık Kaynak Kodlu 20'yi aşkın yazılımın kurumsal sistem ortamlarında çalıştırılmasıyla ilgili uzaktan destek hizmeti sağlıyoruz. Bu yazılımların başında PostgreSQL, OpenStack, Kubernetes, Docker, Ceph, Hyperledger Fabric ve Hadoop da bulunmakta. Tüm liste için ürünler sayfamıza bakabilirsiniz.
+      buttons: 
+        - text: Destek planlarını inceleyin
+          link: "destek-planlari"
+      image: aciklab_destek
     - title: Merkezi Yönetim Sistemi
       subtitle: BT süreçlerinizde bulunan bütün bileşenleri uzaktan, kararlı, güvenli ve genişletilebilir yöntemler ile merkezi olarak yönetmenizi sağlar.<br/><br/>Açık kaynak göç projelerinde Linux çekirdeğine sahip işletim sistemlerini ve diğer platformları Liman MYS ile yönetebilirsiniz.
       buttons:
@@ -56,13 +56,11 @@ params:
         - text: Demo Talebi
           link: "https://liman.havelsan.com.tr/iletisim/"
       image: liman-screen  
-    - title: Açık Kaynak Teknoloji Kampı
-      subtitle: HAVELSAN olarak açık kaynak kodlu teknolojiler alanında kamu kurumları, askeri kurumlar ve özel sektör alt yapılarında bulunan kurumsal lisanslı ürünlerin açık kaynak teknolojileri alanında dönüşümünü hedeflemektedir. HAVELSAN Açık Kaynak Teknoloji Kampı ile Türkiye’nin dijital dönüşümünde açık kaynak teknlojileri alanında görev alacak gençlerin kariyer gelişimine katkı sunmayı hedefliyoruz.
+    - title: HAVELSAN Açıklab
+      subtitle: Açık kaynak projeler geliştirerek; Türkiye başta olmak üzere tüm dünyada kullanılan açık kaynak güvenilir, inovatif ürünler sunmak, bu anlamda Türkiye’nin yazılım dışa bağımlılığını azaltmak, Türkiye’de açık kaynak kullanımını artırmak, dünyaca bilinir bir açık kaynak yazılım şirketi olmayı hedeflemektedir.
       buttons:
-        - text: Detaylı Bilgi
-          link: /duyurular/a%C3%A7%C4%B1k-kaynak-teknoloji-kamp%C4%B1-ba%C5%9Fvurular%C4%B1-ba%C5%9Flad%C4%B1/
-        - text: Hemen Başvur!
-          link: https://vizyonergenc.com/ilan/havelsan/1505-acik-kaynak-teknoloji-kampi
+        - text: Şimdi Bilgi Alın
+          link: "egitimler"
       image: aciklab_slide_1
 
   section_about: 
