--- a/hugo/config.yaml
+++ b/hugo/config.yaml
@@ -16,13 +16,15 @@ menu:
     name: "Ana Sayfa"
     url: "/"
     weight: 1
-  - identifier: news
-    name: "Liman MYS"
-    url: "https://liman.havelsan.com.tr/"
-    weight: 1
   footer:
   - identifier: diger
     name: "/images/aciklab_white.png"
+  - parent: diger
+    name: "Dokümanlar"
+    url: "https://docs.liman.dev"
+  - parent: diger
+    name: "DEV.to Blog"
+    url: "https://dev.to/aciklab"
 
 permalinks:
   posts: /duyurular/:title/
@@ -42,27 +44,11 @@ params:
     button_text: İletişime geçin
     button_link: "/iletisim"
   hero:
-    - title: Açık Kaynak Destek Planları
-      subtitle: Açık Kaynak Kodlu 20'yi aşkın yazılımın kurumsal sistem ortamlarında çalıştırılmasıyla ilgili uzaktan destek hizmeti sağlıyoruz. Bu yazılımların başında PostgreSQL, OpenStack, Kubernetes, Docker, Ceph, Hyperledger Fabric ve Hadoop da bulunmakta. Tüm liste için ürünler sayfamıza bakabilirsiniz.
-      buttons: 
-        - text: Destek planlarını inceleyin
-          link: "destek-planlari"
-        - text: Ürün listesi
-          link: "urunler"
-      image: aciklab_destek
-    - title: Merkezi Yönetim Sistemi
-      subtitle: BT süreçlerinizde bulunan bütün bileşenleri uzaktan, kararlı, güvenli ve genişletilebilir yöntemler ile merkezi olarak yönetmenizi sağlar.<br/><br/>Açık kaynak göç projelerinde Linux çekirdeğine sahip işletim sistemlerini ve diğer platformları Liman MYS ile yönetebilirsiniz.
-      buttons:
-        - text: Neden Liman MYS?
-          link: "https://liman.havelsan.com.tr/neden-liman-mys/"
-        - text: Demo Talebi
-          link: "https://liman.havelsan.com.tr/iletisim/"
-      image: liman-screen  
     - title: HAVELSAN Açıklab
       subtitle: Açık kaynak projeler geliştirerek; Türkiye başta olmak üzere tüm dünyada kullanılan açık kaynak güvenilir, inovatif ürünler sunmak, bu anlamda Türkiye’nin yazılım dışa bağımlılığını azaltmak, Türkiye’de açık kaynak kullanımını artırmak, dünyaca bilinir bir açık kaynak yazılım şirketi olmayı hedeflemektedir.
       buttons:
         - text: Şimdi Bilgi Alın
-          link: "egitimler"
+          link: "iletisim"
       image: aciklab_slide_1
 
   section_about: 
